--- a/2_within-host/templates/template-constant.xml
+++ b/2_within-host/templates/template-constant.xml
@@ -2128,7 +2128,7 @@
 		<distribution>
 			<logNormalDistributionModel meanInRealSpace="true">
 				<mean>
-					<parameter id="ucld.mean" value="8.0E-5" lower="0.0"/>
+					<parameter id="ucld.mean" value="1.2E-4" lower="0.0" />
 				</mean>
 				<stdev>
 					<parameter id="ucld.stdev" value="0.3333333333333333" lower="0.0"/>
@@ -2205,7 +2205,7 @@
 			<parameter idref="alpha"/>
 		</scaleOperator>
 		<scaleOperator scaleFactor="0.75" weight="3">
-			<parameter idref="ucld.mean"/>
+			<parameter idref="ucld.mean" />
 		</scaleOperator>
 		<scaleOperator scaleFactor="0.75" weight="3">
 			<parameter idref="ucld.stdev"/>
@@ -2237,7 +2237,7 @@
 		<uniformIntegerOperator weight="10">
 			<parameter idref="branchRates.categories"/>
 		</uniformIntegerOperator>
-        <scaleOperator scaleFactor="0.75" weight="3">
+        	<scaleOperator scaleFactor="0.75" weight="3">
 			<parameter idref="treeModel.rootHeight"/>
 		</scaleOperator>
 		<uniformOperator weight="30">
@@ -2249,7 +2249,7 @@
 	</operators>
 
 	<!-- Define MCMC                                                             -->
-	<mcmc id="mcmc" chainLength="100000000" autoOptimize="true" operatorAnalysis="step_0.ops">
+	<mcmc id="mcmc" chainLength="200000000" autoOptimize="true" operatorAnalysis="step_0.ops">
 		<posterior id="posterior">
 			<prior id="prior">
 				<logNormalPrior mean="1.0" stdev="1.25" offset="0.0">
@@ -2265,15 +2265,11 @@
 					<parameter idref="alpha"/>
 				</exponentialPrior>
 				<exponentialPrior mean="0.3333333333333333" offset="0.0">
-					<parameter idref="ucld.stdev"/>
-				</exponentialPrior>
-				<logNormalPrior mean="8.0E-5" stdev="2.0E-4" offset="0.0">
+					<parameter idref="ucld.stdev" />
+				</exponentialPrior> 
+				<logNormalPrior mean="1.2E-4" stdev="0.00015" offset="0.0">
 					<parameter idref="ucld.mean"/>
 				</logNormalPrior>
-				<!--<logNormalPrior mean="3.6E-4" stdev="0.006" offset="0.0">
-					<parameter idref="ucld.mean"/>
-				</logNormalPrior>
-				-->
 				<oneOnXPrior>
 					<parameter idref="constant.popSize"/>
 				</oneOnXPrior>
@@ -2289,7 +2285,7 @@
 		<operators idref="operators"/>
 
 		<!-- write log to screen                                                     -->
-		<log id="screenLog" logEvery="100000">
+		<log id="screenLog" logEvery="200000">
 			<column label="Posterior" dp="4" width="12">
 				<posterior idref="posterior"/>
 			</column>
@@ -2308,7 +2304,7 @@
 		</log>
 
 		<!-- write log to file                                                       -->
-		<log id="fileLog" logEvery="10000" fileName="step_0.log" overwrite="true">
+		<log id="fileLog" logEvery="20000" fileName="step_0.log" overwrite="true">
 			<posterior idref="posterior"/>
 			<prior idref="prior"/>
 			<likelihood idref="likelihood"/>
@@ -2329,7 +2325,7 @@
 		</log>
 
 		<!-- write tree log to file                                                  -->
-		<logTree id="treeFileLog" logEvery="100000" nexusFormat="true" fileName="step_0.trees" sortTranslationTable="true">
+		<logTree id="treeFileLog" logEvery="200000" nexusFormat="true" fileName="step_0.trees" sortTranslationTable="true">
 			<treeModel idref="treeModel"/>
 			<trait name="rate" tag="rate">
 				<discretizedBranchRates idref="branchRates"/>
